# mandelbrot-set-webassembly

./: .gitignore  .rescriptsrc.js  Cargo.toml  Makefile  README.md  asset-manifest.json  index.html  package-lock.json  package.json  precache-manifest.273ee947fa7811452a480a758038d96a.js  precache-manifest.dcbbcdd0916de3cdea107586419658fa.js  service-worker.js  tsconfig.json
build-js/: asset-manifest.json  index.html  precache-manifest.181e658c94e56f518c4c03d60fc64c6d.js  precache-manifest.37ec59e03156fdee3dea9651e724f681.js  precache-manifest.cfcce026ecff05cbeea1fa01e030d92b.js  precache-manifest.e68da5e2aa39694ccf9f2c3fd91f8adc.js  precache-manifest.e8f0e27c8a823d5ab4b4da8bbbaa55e8.js  service-worker.js
build-wasm/: asset-manifest.json  index.html  precache-manifest.0e2a98be572741a50c8e1d8bfe3312d0.js  precache-manifest.2033a58fb3893e07328565085a559565.js  precache-manifest.497e621e754f1a846635f27646c42c27.js  precache-manifest.8837974856b39f17811696ab9b239cab.js  precache-manifest.d533bb8ba852208a3d350cf93fc6192b.js  service-worker.js
config/: paths.js  webpack.config.dev.js  webpack.config.prod.js
src/: App.tsx  index.tsx  react-app-env.d.ts
src/components/: App.tsx
src/domain_rust/: mandelbrot_set.rs
src/domain_ts/: CanvasPixelDrawer.ts  Color.ts  Complex.ts  MandelbrotSet.ts  MandelbrotSetJavascript.ts  Matrix.ts  Palette.test.ts  Palette.ts  Themes.ts  mandelbrot-themes.ts  scale.ts
src/domain_wasm/: mandelbrot.d.ts  mandelbrot.js  mandelbrot_bg.wasm
src/pkg/: package.json  rust_webpack_template.d.ts  rust_webpack_template.js  (+2 more)
src/rust/: lib.rs  (+1 more)
(+94 files in other folders)
