cargo-features = ["edition"]

[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Daniel Ramos <danielramosacosta@hotmail.com>"]
edition = "2018"

[lib]
path = "src/domain_rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.5"
wasm-bindgen = "0.2.28"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData'
]